--- a/static/index.html
+++ b/static/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE HTML>
 
 <html>
 <head>
@@ -8,18 +8,29 @@
 
 <body>
 	<!-- this is a comment in HTML -->
-	<h1>Scott Klemmer</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
-	<h4>Project Portfolio</h4>
+	<h1 style="font-family:helvetica;">Harrison Wang</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
+	<h4 style="font-family:helvetica;">Project Portfolio</h4>
 
 	<!-- p means paragraph -->
-	<p>Scott is an Associate Professor of Cognitive Science and Computer Science & Engineering at UC San Diego, where he is a co-founder and Associate Director of the Design Lab. He previously served as Associate Professor of Computer Science at Stanford, where he co-directed the HCI Group, held the Bredt Faculty Scholar chair, and was a founding participant in the d.school. </p>
+	<p style="font-family:helvetica;">Harrison is a Computer Science undergraduate at UC San Diego. </p>
 
 	<h4>Projects</h4>
 	<ol>
-		<li>Design Thinking</li>
-		<li>Needfinding</li>
-		<li>Prototyping</li>
-		<li>...</li>
+		<li><a href="http://cogs121-piedpiper.herokuapp.com/" style="font-size:20px">Pied Piper</a></li>
+		<div>
+			<p style="font-family:helvetica;"> Pied Piper helps you find the real cost of your potential new home by factoring in data that monetary price simply can’t represent. </p>
+			<img src="img/piedpiperhome.jpg" alt="home" width="700" height="385" align="left">
+			<img src="img/piedpipermap.jpg" alt="map" width="700" height="385">
+		</div>
+
+		<li><a href="https://shrouded-depths-7682.herokuapp.com/src/login.html" style="font-size:20px">Eat Smart</a></li>
+		<div>
+			<p style="font-family:helvetica;"> Eat Smart is a mobile application that allows you to track your habits. </p>
+			<img src="img/eatsmartlogin.jpg" alt="login" width="700" height="385">
+			<img src="img/eatsmartlist.jpg" alt="list" width="700" height="385">
+		</div>	
+		<li><p style="font-size:20px">Big Omega</p></li>
+		<p style="font-family:helvetica;"> Experience a realistic online banking simulation with Big Omega. </p>
 	</ol>
 </body>
 </html>
